# dockerfile-roast

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  build.rs
.github/workflows/: docker-publish.yml  pages.yml  release.yml  update-homebrew.yml  vscode-publish.yml
docs/: index.html
homebrew/: droast.rb  droast.rb.tmpl
scripts/: build-release.sh  install.sh  publish-vscode.sh  update-rules-readme.sh
src/: config.rs  lib.rs  linter.rs  main.rs  output.rs  parser.rs  rules.rs  wasm.rs
tests/: rules_test.rs
vscode-extension/: .gitignore  .vscodeignore  package.json
vscode-extension/src/: extension.ts
