[package]
name = "dockerfile-roast"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "roast"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
regex = "1"
anyhow = "1"
